# monads

./: README.md  monads.cabal  stack.yaml
src/: MonadLib.hs  Transformer.hs
