name:                monads
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MLavrentyev/monads#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Lavrentyev
maintainer:          lavrema@outlook.com
copyright:           2022 Mark Lavrentyev
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable monads
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
